# cuMPI

./: CMakeLists.txt  README.md  benchmark.sh  run.sh
benchmark/: CMakeLists.txt  CocurrentSendRecv.cu  PreciseTimer.h
src/: CMakeLists.txt  cuMPI.cu  cuMPI_runtime.h  main.cu  test.cu
test/: CMakeLists.txt  testAllReduce.cu  testBcast.cu  testSendRecv.cu
